--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,6 +8,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-size: 16px;
 }
 
 header {
@@ -24,6 +25,37 @@ a.navbar-brand.color {
     color: #0f4c81;
 }
 
+.banner_top {
+    margin-top: 50px;
+    background-color: #007592;
+    color: #FCDA73;
+    background-size: cover;
+    width: 100%;
+    height: 78vh;
+}
+.service {
+    margin-top: 80px;
+    width: 100%;
+}
+
+.texto_home {
+    color: #e5e5e5;
+    padding: 5px;
+    font-size: 1.3em;
+    line-height: 30px;
+}
+
+#margem_texto {
+    margin-top: 40px;
+}
+
+#btn_qi a {
+
+    color: #fcda73;
+    font-size: 1.5em;
+    text-decoration: none;
+    text-transform: uppercase;
+}
 
 /* barra de busca */
 
@@ -50,14 +82,6 @@ a.navbar-brand.color {
     width: 25px;
     position: relative;
     margin: 6px 0 6px 0;
-}
-
-.btn-dark {
-    background: #00415E;
-}
-
-.btn-info {
-    background: #219EBC;
 }
 
 .hamburguer {
@@ -107,10 +131,8 @@ span#sobre h4 {
 
 /* banner */
 
-.banner {
-    background-color: white;
-    padding: 30px;
-}
+
+
 
 #cor {
     color: #fcda73;
@@ -118,7 +140,7 @@ span#sobre h4 {
 }
 
 .fundo {
-    background-color: #e5e5e5;
+    background-color: #007592;
 }
 
 #tam {
@@ -138,11 +160,6 @@ span#sobre h4 {
 
 .but {
     padding: 30px;
-}
-
-#letra {
-    font-size: 12px;
-    padding: 25px;
 }
 
 /* FAQ */
