--- a/css/estilo.css
+++ b/css/estilo.css
@@ -165,10 +165,6 @@ header {
     width: 15%;
 }
 
-.banner_azul h1 {
-    color: #FCDA73;
-}
-
 /* sobre nós */
 .banner_conteudo {
     background-color: #E2E2E7;
@@ -197,13 +193,43 @@ span#sobre h4 {
 
 /* FAQ */
 
+.banner_cinza {
+    background-color: #333333;
+    background-size: cover;
+    width: 100%;
+    height: 27vh;
+  }
+
+.banner_cinza h1 {
+    color: #FCDA73;
+    font-size: 5em;
+    margin-top: 60px;
+}
+
+.banner_faq {
+    background-color: #E2E2E7;
+    background-size: cover;
+    width: 100%;
+    height: 110vh;
+}
+
+.perguntas {
+    margin-top: 50px;
+}
+
+#hashtag {
+    margin-left: 20px;
+    margin-top: 60px;
+    width: 8%;
+}
+
 .question-1 {
     margin-top: 200px;
 }
 
 .question {
     border-bottom: 1px solid #ccc;
-    padding: 10px 0
+    padding: 10px 0;
   }
   
   .question input,
