--- a/css/estilo.css
+++ b/css/estilo.css
@@ -29,12 +29,12 @@ header {
     color: #FCDA73;
     background-size: cover;
     width: 100%;
-    height: 78vh;
+    height: 80vh;
 }
 
 .service {
     margin-left: 25px;
-    margin-top: 80px;
+    margin-top: 120px;
     width: 100%;
 }
 
@@ -46,7 +46,7 @@ header {
 }
 
 #margem_texto {
-    margin-top: 40px;
+    margin-top: 80px;
 }
 
 #btn_qi a {
@@ -116,12 +116,39 @@ header {
 }
 
 .alinha_form {
-    margin-top: 16px;
+    margin-top: 20px;
 }
 
 .btn-azul {
     background: #00415e;
 }
+
+/* banner index team */
+
+.banner_team {
+    background-color: #007592;
+    color: #FCDA73;
+    background-size: cover;
+    width: 100%;
+    height: 78vh;
+}
+
+.team {
+    margin-left: 50px;
+    margin-top: 0;
+    height: 78vh;
+
+}
+
+#logo_banner {
+    height: 35vh;
+}
+
+#margem_texto_b {
+    margin-top: 30px;
+}
+
+
 /* barra de busca */
 
 #divBusca{
