feed footer suporte - MILENA

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -274,17 +274,56 @@ span#sobre h4 {
     display: block
   }
 
-/* foooter */
 
-.rodape {
-    background-color: #333333;
-    padding: 15px;
+/* SECTION FOOTER */
+
+.footer {
+    grid-area: footer;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    font-size: 0.8em;
+    display: inline-block;
 }
 
-ul li a {
-    color: white;
+.footer ul li {
+    margin: 0px;
+    list-style-type: none;
+    display: inline;
+    font-size: 1em;
 }
 
-#face {
-    width: 100px;
+.footer ul li a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.footer ul li a:hover {
+    color: #e5e5e5;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.footer img {
+    width: 30px;
+    margin: 5px;
+}
+
+.footer h6 {
+    text-align: center;
+}
+
+.endereco {
+    text-align: center;
+}
+
+.copyright {
+    color: #fff;
+    background-color: #666;
+    text-align: center;
+    width: 100%;
+}
+
+.copyright p {
+    font-size: 1em;
 }
