--- a/css/feed.css
+++ b/css/feed.css
@@ -12,8 +12,10 @@ body {
     font-size: 20px;
 }
 
+
 .grid-container {
     display: grid;
+    margin-top: -25px;
     grid-template-columns: 15% 1fr 15%;
     grid-template-rows: 100px 1fr 300px;
     grid-template-areas: "header header header"
@@ -85,7 +87,7 @@ body {
     background-color: #333;
     color: #fff;
     font-size: 0.8em;
-    display: inline-block;
+    
 }
 
 .footer ul li {
