--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap');
-
 * {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
@@ -18,7 +17,6 @@ header {
 .nav_barra {
     height: 60px;
 }
-
 
 
 /* banner index topo */
@@ -50,13 +48,11 @@ header {
 }
 
 #btn_qi a {
-
     color: #fcda73;
     font-size: 1.5em;
     text-decoration: none;
     text-transform: uppercase;
 }
-
 
 #cor {
     color: #fcda73;
@@ -82,6 +78,7 @@ header {
     padding: 30px;
 }
 
+
 /* banner index meio */
 
 .banner_middle {
@@ -105,6 +102,7 @@ header {
     width: 90%;
 }
 
+
 /* banner cadastro index */
 
 .banner_cadastro {
@@ -123,6 +121,7 @@ header {
     background: #00415e;
 }
 
+
 /* banner index team */
 
 .banner_team {
@@ -137,7 +136,6 @@ header {
     margin-left: 50px;
     margin-top: 0;
     height: 78vh;
-
 }
 
 #logo_banner {
@@ -151,24 +149,24 @@ header {
 
 /* barra de busca */
 
-#divBusca{
+#divBusca {
     background-color: white;
-    border:solid 1px;
+    border: solid 1px;
     border-color: #cccccc;
-    border-radius:5px;
-    width:350px;
+    border-radius: 5px;
+    width: 350px;
     height: 40px;
-  }
-   
-#txtBusca{
-    float:left;
-    background-color:transparent;
-    padding-left:5px;
-    font-size:18px;
-    border:none;
-    height:40px;
-    width:315px;
-  }
+}
+
+#txtBusca {
+    float: left;
+    background-color: transparent;
+    padding-left: 5px;
+    font-size: 18px;
+    border: none;
+    height: 40px;
+    width: 315px;
+}
 
 #btnBusca {
     width: 25px;
@@ -186,14 +184,16 @@ header {
     color: #FCDA73;
     width: 100%;
     height: 47vh;
-  }
+}
 
 #quemindica {
     margin-top: 90px;
     width: 15%;
 }
 
+
 /* sobre nós */
+
 .banner_conteudo {
     background-color: #E2E2E7;
     background-size: cover;
@@ -207,9 +207,9 @@ header {
     width: 40%;
 }
 
-span#sobre  {
+span#sobre {
     padding: 5px;
-    font-size: 1,2em;
+    font-size: 1, 2em;
     line-height: 35px;
 }
 
@@ -226,7 +226,7 @@ span#sobre h4 {
     background-size: cover;
     width: 100%;
     height: 29vh;
-  }
+}
 
 .banner_cinza h1 {
     color: #FCDA73;
@@ -258,24 +258,33 @@ span#sobre h4 {
 .question {
     border-bottom: 1px solid #ccc;
     padding: 10px 0;
-  }
-  
-  .question input,
-  .question .answer { display: none }
-  
-  .question label {
+}
+
+.question input,
+.question .answer {
+    display: none
+}
+
+.question label {
     display: inline-block;
     font-weight: bold;
     margin-bottom: 5px;
     width: 100%
-  }
-  
-  .question input:checked ~ .answer {
+}
+
+.question input:checked~.answer {
     display: block
-  }
+}
 
 
 /* SECTION FOOTER */
+
+footer {
+    background-color: #1b252f;
+    position: absolute;
+    right: 0;
+    width: 100%;
+}
 
 .footer {
     grid-area: footer;
@@ -320,15 +329,8 @@ span#sobre h4 {
 .copyright {
     color: #fff;
     background-color: #666;
-    text-align: center;
-    width: 100%;
-}
-
-.copyright p {
-    font-size: 1em;
 }
 
 #login {
     padding: 150px;
 }
-
