--- a/css/index.css
+++ b/css/index.css
@@ -104,11 +104,12 @@
     background-size: cover;
     width: 100%;
     height: 78vh;
+    margin-top: 0px;
 }
 
 .team {
     margin-left: 50px;
-    margin-top: 0;
+    margin-top: 5px;
     height: 78vh;
 }
 
