--- a/css/suporte.css
+++ b/css/suporte.css
@@ -101,10 +101,11 @@ a {
 a:hover {
     color: #d64e1c;
 }
+/*
 
 div ::placeholder {
-    /* color: #5f5f5f; */
-}
+    /* color: #5f5f5f; 
+} */
 
 input:hover,
 textarea:hover {
