--- a/css/estilo.css
+++ b/css/estilo.css
@@ -186,6 +186,7 @@ span#sobre h4 {
     background-color: #306d5c;
     border-radius: 10px;
     padding: 10px;
+    color: white;
 }
 
 .padrao a {
@@ -194,6 +195,21 @@ span#sobre h4 {
     color: white;
     padding: 10px;
     text-decoration: none;
+}
+
+
+/*LOGIN */
+
+.form-signin {
+    width: 100%;
+    max-width: 300px;
+    padding: 15px;
+    margin: auto;
+    margin-bottom: 50px;
+}
+
+form {
+    display: block;
 }
 
 
