--- a/css/estilo.css
+++ b/css/estilo.css
@@ -267,6 +267,9 @@ footer {
     background-color: #666;
     text-align: center;
     width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 0;
 }
 
 @media (max-width: 768px){
