--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ h4 {
     background-color: #007592;
     color: #FCDA73;
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 85vh;
 }
 
@@ -48,7 +48,7 @@ h4 {
     background-color: #e5e5e5;
     color: #007592;
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -70,7 +70,7 @@ h4 {
     background-color: #FCDA73;
     color: #e5e5e5;
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 10vh;
 }
 
@@ -85,7 +85,7 @@ h4 {
     background-color: #007592;
     color: #FCDA73;
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     margin-top: 0px;
 }
