--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,14 @@ h4 {
     line-height: 36px;
 }
 
+h3 {
+    font-size: 1.7em;
+}
+
+p {
+    font-size: 1.3em;
+}
+
 /* banner index topo */
 
 .banner_top {
@@ -21,8 +29,6 @@ h4 {
 .texto_home {
     color: #e5e5e5;
     padding: 5px;
-    font-size: 1.5em;
-    line-height: 36px;
 }
 
 #cor {
@@ -55,8 +61,10 @@ h4 {
 .texto_meio {
     color: #333333;
     padding: 5px;
-    font-size: 1.5em;
-    line-height: 36px;
+}
+
+.margem_texto {
+    margin-top: 100px;
 }
 
 .img_rede_social {
@@ -86,8 +94,8 @@ h4 {
     color: #FCDA73;
     background-size: cover;
     width: 100%;
-    height: 100vh;
     margin-top: 0px;
+    padding-bottom: 20px;
 }
 
 .team {
@@ -97,9 +105,8 @@ h4 {
 }
 
 #logo_banner {
-    width: 15vw;
+    height: 20vh;
 }
 
-#margem_texto_b {
-    margin-top: 30px;
-}
+
+
