--- a/css/estilo.css
+++ b/css/estilo.css
@@ -91,11 +91,8 @@ header {
     width: 100%;
 }
 
-#grupo {
-    margin-top: 50px;
-    margin-left: 30px;
-    margin-bottom: 30px;
-    width: 40%;
+.img_grupo {
+    padding-bottom: 50px;
 }
 
 span#sobre {
