--- a/css/minhaConta.css
+++ b/css/minhaConta.css
@@ -287,7 +287,7 @@ ul li a {
     padding: 20px;
     margin-top: 0%;
     border-radius: 50%;
-    width: 100%;
+    width: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -326,8 +326,8 @@ ul li a {
 }
 
 #minhasHashtags {
-    background-color: #0f4c81;
-    border: solid 1px;
+    background-color: #007592;
+    border:solid 1px;
 }
 
 #posicao {
