--- a/css/estilo.css
+++ b/css/estilo.css
@@ -38,12 +38,17 @@ header {
 
 /* barra de busca */
 
-#divBusca {
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+
+.divBusca {
+    background-color: white;
+    background-size:3vh;
+    background-image: url('../imagens/loupe.png');
+    background-position: 96%; 
+    background-repeat: no-repeat;
+    border: solid 1px;
+    border-color: #cccccc;
+    border-radius: 5px;
+    margin-left: 10px;
 }
 
 #txtBusca {
@@ -52,6 +57,16 @@ header {
     padding-left: 5px;
     font-size: 18px;
     border: none;
+}
+
+#fotoUsuario {
+    width: 6%;
+    margin-left: 93%;
+    margin-top: 0.5%;
+}
+
+.fundo {
+    background-color: #007592;
 }
 
 .hamburguer {
