--- a/css/estilo.css
+++ b/css/estilo.css
@@ -63,8 +63,8 @@ header {
 
 #fotoUsuario {
     float: right;
-    margin-right: 10px;
-    margin-left: 10px;
+    margin: 0 10px;
+    padding: 2px 0;
 }
 
 .fundo {
