--- a/css/minhaConta.css
+++ b/css/minhaConta.css
@@ -254,7 +254,7 @@ ul li a {
     padding: 20px;
     margin-top: 0%;
     border-radius: 50%;
-    width: 50%;
+    width: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -293,7 +293,7 @@ ul li a {
 }
 
 #minhasHashtags {
-    background-color: #007592;
+    background-color: #0f4c81;
     border: solid 1px;
 }
 
@@ -309,7 +309,7 @@ ul li a {
     display: flex;
     flex-direction: column;
     padding: 0px;
-    margin-right: -25%;
+    margin-right: -23%;
 }
 
 
