--- a/css/estilo.css
+++ b/css/estilo.css
@@ -235,3 +235,9 @@ footer {
         padding-bottom: 30px;
     }
 }
+
+@media (max-width: 541px) {
+    #bemvindo {
+        display: none;
+    }
+}
